--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link rel="stylesheet" type="text/css" href="style.css">
 <html>
 <head>
   <meta charset="utf-8"/>
@@ -26,7 +27,7 @@
         <a href="https://twitter.com/luk3rr" target="_blank"><i class="fab fa-brands fa-twitter fa-3x" aria-hidden="true"></i></a>
         <a href="https://www.youtube.com/@luk3rr/playlists" target="_blank"><i class="fab fa-brands fa-youtube fa-3x" aria-hidden="true"></i></a>
         <a href="https://open.spotify.com/user/127fo31zez983lqd9w1s8gf34" target="_blank"><i class="fab fa-spotify fa-3x" aria-hidden="true"></i></a>
-        <a href="https://instagram.com/luskaoo/" target="_blank"><i class="fab fa-instagram fa-3x" aria-hidden="true"></i></a>
+        <a href="https://instagram.com/lucas.isnull/" target="_blank"><i class="fab fa-instagram fa-3x" aria-hidden="true"></i></a>
     </nav>
     </div>
     <script>
