+ Update dir structure + Add my drafts

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <meta property="og:image" content="https://avatars.githubusercontent.com/u/47197841"/>
         <script src="https://kit.fontawesome.com/cab42dffd7.js" crossorigin="anonymous"></script>
 
-        <link rel="stylesheet" type="text/css" href="1.min.css">
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="css/1.min.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
         <header id="ms_navbar">
@@ -32,8 +32,9 @@
                 <h1>Lucas Araújo</h1>
                 <nav id="ms_desktopnav">
                     <ul>
-                        <li><a href="/" class="active">Sobre</a></li>
+                        <li><a href="https://homepages.dcc.ufmg.br/~araujolucas/" class="active">Sobre</a></li>
                         <li><a href="https://homepages.dcc.ufmg.br/~araujolucas/cv/CV-Lucas_de_Oliveira_Araujo.pdf" target="_blank">CV Completo</a></li>
+                        <li><a href="https://homepages.dcc.ufmg.br/~araujolucas/rascunhos/">Rascunhos</a></li>
                     </ul>
                 </nav>
             </div>
@@ -73,6 +74,7 @@
                     <ul>
                         <li><a href="https://homepages.dcc.ufmg.br/~araujolucas/" class="active">Sobre</a></li>
                         <li><a href="https://homepages.dcc.ufmg.br/~araujolucas/cv/CV-Lucas_de_Oliveira_Araujo.pdf" target="_blank">CV Completo</a></li>
+                        <li><a href="https://homepages.dcc.ufmg.br/~araujolucas/rascunhos/">Rascunhos</a></li>
                     </ul>
                 </div>
             </nav>
@@ -112,7 +114,7 @@
                     <h2 id="contact">Contato</h2>
                     <p>
                         Meu e-mail de contato é <a href="mailto:araujolucas@dcc.ufmg.br">araujolucas@dcc.ufmg.br</a> e, se você for louco, pode criptografar a sua mensagem com a minha
-                        <a href="https://github.com/luk3rr/lucas.me/blob/main/public-key_lucas.asc" target="_blank">chave pública!</a>.
+                        <a href="https://github.com/luk3rr/lucas.me/blob/main/pubkey/public-key_lucas.asc" target="_blank">chave pública!</a>.
 
                         <div class="container-fluid text-center">
                             <nav class="d-flex justify-content-center">
