Corrigir título da página

--- a/rascunhos/albums.html
+++ b/rascunhos/albums.html
@@ -16,7 +16,7 @@
     </style>
   </head>
   <body>
-    <h1>Meu álbuns favoritos</h1>
+    <h1>Meus álbuns favoritos</h1>
     <div>Não necessariamente em ordem de preferência</div>
 
     <p></p>
