--- a/rascunhos/albums.html
+++ b/rascunhos/albums.html
@@ -174,7 +174,7 @@
 
       <br /><br />
 
-      <span> Bring Me The Horizon, That's the Spirit </span>
+      <span> That's the Spirit, Bring Me The Horizon </span>
 
       <br /><br />
 
@@ -223,6 +223,18 @@
       <br /><br />
 
       <span> .5 The Gray Chapter, Slipknot </span>
+
+      <br /><br />
+
+      <span> Acústico MTV, Engenheiros do Hawaii </span>
+
+      <br /><br />
+
+      <span> Acústico MTV, Legião Urbana </span>
+
+      <br /><br />
+
+      <span> MTV Unplugged, Alice in Chains </span>
     </p>
   </body>
 </html>
