--- a/rascunhos/filmes.html
+++ b/rascunhos/filmes.html
@@ -71,6 +71,10 @@
 
       <br /><br />
 
+      <span> Tropa de Elite 1 e 2 </span>
+
+      <br /><br />
+
       <span> O lobo de Wall Street </span>
 
       <br /><br />
@@ -91,6 +95,22 @@
       <br /><br />
 
       <span> O dia depois de amanhã </span>
+
+      <br /><br />
+
+      <span> Batman - O Cavaleiro das Trevas </span>
+
+      <br /><br />
+
+      <span> Cidade de Deus </span>
+
+      <br /><br />
+
+      <span> O auto da compadecida </span>
+
+      <br /><br />
+
+      <span> Jumper </span>
     </p>
   </body>
 </html>
