--- a/rascunhos/100coisas.html
+++ b/rascunhos/100coisas.html
@@ -184,5 +184,15 @@
     <p></p>
 
     <span> Guerra de bolão de água </span>
+
+    <br />
+    <p></p>
+
+    <span> Artes clássicas </span>
+
+    <br />
+    <p></p>
+
+    <span> Queijo da roça com doce de leite </span>
   </body>
 </html>
