--- a/rascunhos/arte.html
+++ b/rascunhos/arte.html
@@ -48,6 +48,22 @@
       <br /><br />
 
       <span> Deposição, Raphael </span>
+
+      <br /><br />
+
+      <span> O Desengano, Francesco Queirolo </span>
+
+      <br /><br />
+
+      <span> Cristo Velado, Giuseppe Sanmartino </span>
+
+      <br /><br />
+
+      <span> Vênus de Milo, Alexandre de Antioquia </span>
+
+      <br /><br />
+
+      <span> A Virgem Velada, Giovanni Strazza </span>
     </p>
   </body>
 </html>
