--- a/rascunhos/livros.html
+++ b/rascunhos/livros.html
@@ -57,6 +57,7 @@
       <span>Os elementos, Euclides</span><br /><br />
       <span>Ideias para adiar o fim do mundo, Ailton Krenak</span><br /><br />
       <span>Sobre a brevidade da vida, Sêneca</span><br /><br />
+      <span>Deus um delírio, Richard Dawkins </span>
     </p>
   </body>
 </html>
