--- a/rascunhos/albums.html
+++ b/rascunhos/albums.html
@@ -235,6 +235,10 @@
       <br /><br />
 
       <span> MTV Unplugged, Alice in Chains </span>
+
+      <br /><br />
+
+      <span> Ready to Die, The Notorious B.I.G. </span>
     </p>
   </body>
 </html>
