--- a/rascunhos/albums.html
+++ b/rascunhos/albums.html
@@ -38,6 +38,14 @@
 
       <br /><br />
 
+      <span> Disintegration, The Cure </span>
+
+      <br /><br />
+
+      <span> Clube da Esquina, Milton Nascimento & Lô Borges </span>
+
+      <br /><br />
+
       <span> A Thousand Suns, Linkin Park </span>
 
       <br /><br />
