--- a/rascunhos/albums.html
+++ b/rascunhos/albums.html
@@ -247,6 +247,11 @@
       <br /><br />
 
       <span> Ready to Die, The Notorious B.I.G. </span>
+
+      <br /><br />
+
+      <span> David Gilmour, David Gilmour </span>
+
     </p>
   </body>
 </html>
