--- a/rascunhos/albums.html
+++ b/rascunhos/albums.html
@@ -46,6 +46,10 @@
 
       <br /><br />
 
+      <span> Roots, Sepultura </span>
+
+      <br /><br />
+
       <span> A Thousand Suns, Linkin Park </span>
 
       <br /><br />
@@ -118,6 +122,10 @@
 
       <br /><br />
 
+      <span> Hypnotize, System of a Down</span>
+
+      <br /><br />
+
       <span> Cleopatra, The Lumineers </span>
 
       <br /><br />
@@ -143,6 +151,10 @@
       <br /><br />
 
       <span> Songs In The Key Of Life, Stevie Wonder </span>
+
+      <br /><br />
+
+      <span> Mother, Cleo Sol </span>
 
       <br /><br />
 
