--- a/rascunhos/albums.html
+++ b/rascunhos/albums.html
@@ -30,6 +30,10 @@
 
       <br /><br />
 
+      <span> The Bends, Radiohead </span>
+
+      <br /><br />
+
       <span> The Queen Is Dead, The Smiths </span>
 
       <br /><br />
@@ -54,11 +58,19 @@
 
       <br /><br />
 
-      <span> Livin' for you, Al Green</span>
+      <span> Livin' for you, Al Green </span>
 
       <br /><br />
 
-      <span> Animals, Pink Floyd</span>
+      <span> Animals, Pink Floyd </span>
+
+      <br /><br />
+
+      <span> Between Days, Far Caspian </span>
+
+      <br /><br />
+
+      <span> The Heights, Far Caspian </span>
 
       <br /><br />
 
