--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                 <nav id="ms_desktopnav">
                     <ul>
                         <li><a href="https://homepages.dcc.ufmg.br/~araujolucas/" class="active">Sobre</a></li>
-                        <li><a href="https://homepages.dcc.ufmg.br/~araujolucas/cv/CV-Lucas_de_Oliveira_Araujo.pdf" target="_blank">CV Completo</a></li>
+                        <li><a href="https://homepages.dcc.ufmg.br/~araujolucas/cv/CV-Lucas_de_Oliveira_Araujo.pdf" target="_blank">CV pt_BR</a></li>
+                        <li><a href="https://homepages.dcc.ufmg.br/~araujolucas/cv/CV-Lucas_de_Oliveira_Araujo_en-US.pdf" target="_blank">CV en_US</a></li>
                         <li><a href="https://homepages.dcc.ufmg.br/~araujolucas/rascunhos/">Rascunhos</a></li>
                     </ul>
                 </nav>
@@ -73,7 +74,8 @@
                 <div id="ms_navdrawer_content">
                     <ul>
                         <li><a href="https://homepages.dcc.ufmg.br/~araujolucas/" class="active">Sobre</a></li>
-                        <li><a href="https://homepages.dcc.ufmg.br/~araujolucas/cv/CV-Lucas_de_Oliveira_Araujo.pdf" target="_blank">CV Completo</a></li>
+                        <li><a href="https://homepages.dcc.ufmg.br/~araujolucas/cv/CV-Lucas_de_Oliveira_Araujo.pdf" target="_blank">CV pt_BR</a></li>
+                        <li><a href="https://homepages.dcc.ufmg.br/~araujolucas/cv/CV-Lucas_de_Oliveira_Araujo_en-US.pdf" target="_blank">CV en_US</a></li>
                         <li><a href="https://homepages.dcc.ufmg.br/~araujolucas/rascunhos/">Rascunhos</a></li>
                     </ul>
                 </div>
@@ -89,8 +91,8 @@
                         <a href="https://en.wikipedia.org/wiki/Arch_Linux" target="_blank">Arch Linux</a>.
                     </p>
                     <p>
-                        Tenho interesse em desenvolvimento Back-end, principalmente com Java, Python e C++. Linguagens são só ferramentas, e qualquer bom dev consegue trabalhar com
-                        qualquer uma. Essas três que eu citei são apenas as ferramentas que eu mais gosto de trabalhar.
+                        Tenho interesse em desenvolvimento Back-end, principalmente com Java, Kotlin, Python e C++. Linguagens são só ferramentas, e qualquer bom dev consegue trabalhar com
+                        qualquer uma. Essas que eu citei são apenas as ferramentas que eu mais gosto de trabalhar.
                     </p>
                     <p>
                         Atualmente, estou concluindo o meu bacharelado em <a href="https://dcc.ufmg.br/bacharelado-em-sistemas-de-informacao/" target="_blank">Sistemas de Informação</a>
@@ -109,7 +111,8 @@
                     <p>
                         Sempre subo alguns códigos no meu <a href="https://github.com/luk3rr" target="_blank">Github</a>.
                         A maioria dos meus projetos são frutos de trabalhos práticos da universidade e são em C++,
-                        mas também tenho alguns programas em Java, Python e Bash.
+                        mas também tenho alguns programas em Java, Kotlin, Python, Bash e também alguns projetos de DevOps
+                        e Infraestrutura como Código (IaC) com Terraform e Ansible.
                     </p>
                     <h2 id="contact">Contato</h2>
                     <p>
@@ -121,7 +124,6 @@
                                 <a href="https://discordapp.com/users/6867670291219743903" target="_blank"><i class="fab fa-discord fa-3x" aria-hidden="true"></i></a>
                                 <a href="https://www.linkedin.com/in/luk3rr" target="_blank"><i class="fab fa-linkedin fa-3x" aria-hidden="true"></i></a>
                                 <a href="https://github.com/luk3rr" target="_blank"><i class="fab fa-github fa-3x" aria-hidden="true"></i></a>
-                                <a href="https://telegram.me/luk3rr" target="_blank"><i class="fab fa-telegram fa-3x" aria-hidden="true"></i></a>
                                 <a href="https://twitter.com/luk3rr" target="_blank"><i class="fab fa-brands fa-twitter fa-3x" aria-hidden="true"></i></a>
                                 <a href="https://www.youtube.com/@luk3rr/playlists" target="_blank"><i class="fab fa-brands fa-youtube fa-3x" aria-hidden="true"></i></a>
                                 <a href="https://open.spotify.com/user/127fo31zez983lqd9w1s8gf34" target="_blank"><i class="fab fa-spotify fa-3x" aria-hidden="true"></i></a>
